--- a/circos.conf
+++ b/circos.conf
@@ -35,7 +35,7 @@ file = data/final_links.tsv
 <<include etc/colors_fonts_patterns.conf>>
 
 <colors>
-<<include SPB_colors.conf>>
+<<include Species_colors.conf>>
 </colors>
 
 <<include etc/housekeeping.conf>>
