--- a/Species_colors.conf
+++ b/Species_colors.conf
@@ -1,3 +1,6 @@
+# On the left: contig/scaffold ID
+# On the right: Hex code for the color you want to assign to each contig/scaffold
+
 ctg703 = 6E2605
 ctg705 = C20A0A
 ctg702 = DF5B08
